--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  /* background-color: rebeccapurple !important; */
+  background-color: #5f3a83a4 !important;
 }
 
 .picture {
@@ -23,12 +23,14 @@ body {
 
 .cardsContainer {
   display: grid;
-  grid-template-columns: repeat(5, fr);
+  grid-template-columns: repeat(5, 1fr);
   gap: 3% 3%;
-	border: 2px solid #696989;
-  row-gap: 10px;
 	padding: 10px;
-	width: 400px;
+  background: none;
+}
+
+.anime {
+  border: ;
 }
 
 .error {
