--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,14 +1,35 @@
 @import url('https://fonts.googleapis.com/css2?family=Neucha&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Pangolin&display=swap');
 
+:root {
+  --text-light: #F9F6EF;
+}
+
 * {
   font-family: "Pangolin";
-  font-style: normal;
-  color: black !important;
+  color: var(--text-light);
 }
 
 body {
-  background-color: #5f3a83a4 !important;
+  margin: 0;
+  min-height: 100vh;
+  background-image: 
+    radial-gradient(
+    circle at 50% 50%,
+      #393a4e,
+      #1f2020
+    );
+}
+
+.nav-link,
+.navbar-brand {
+  color: var(--text-light) !important;
+}
+
+.nav-link {
+  text-align: center;
+  width: 100px;
+  vertical-align: bottom;
 }
 
 .picture {
@@ -22,17 +43,46 @@ body {
 }
 
 .cardsContainer {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  gap: 3% 3%;
-	padding: 10px;
-  background: none;
+  padding: 2%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .anime {
-  border: ;
+  width: 250px;
+  height: 350px;  
+  margin: 4%;
+  display: flex;
+  align-items: end;
+  background-size: cover;
+  background-position: center;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
+  font-display: hidden;
+  border-radius: 10px;
 }
 
-.error {
+.anime:hover {
+  scale: 1.1;
+  transition: 0.5s;
+  cursor: pointer;
+  font-size: 150%;
+}
 
+.anime h4 {
+  color: var(--text-light);
+  background-color: #2f3040a8;
+  width: 100% !important;
+  min-height: 40px;
+  margin-bottom: 0px;
+  border-radius: 0 0 10px 10px;
+}
+
+a {
+  text-decoration: none !important;
+}
+
+button {
+  background: none !important;
 }
